[package]
name = "zchat-interperter"
version = "0.1.0"
authors = ["Shalev Haimovitz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.17.0"
native-dialog = "0.5.1"

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"]

[profile.release]
opt-level = 2

[patch.crates-io]
