[package]
name = "zchat-interperter"
version = "0.1.0"
authors = ["Shalev Haimovitz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.17.0", features = ["persistence"] }
native-dialog = "0.5.1"
serde = "1.0"
serde_derive = "0.9"

[profile.release]
opt-level = 2
